# firefly

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  demo.asm  demo.md  imgui.ini  init.lua  jsconfig.json
config/duskland/: options.cfg
definition/: co.lua  database.lua  document.lua  event.lua  input.lua  locale.lua  log.lua  media.lua  runtime.lua  serialization.lua  video.lua
definitions/: firefly.dtd
definitions/javascript/@types/: document.d.ts  index.d.ts  locale.d.ts  package.json  runtime.d.ts
design/neo/: lang.lex  memory.md  operator.md
duskland/: init.lua
lua/: init.lua
lua/definition/: duskland.lua
lua/duskland/: init.lua
lua/duskland/api/: init.lua
media/document/demo/: index.xml
media/document/demo/components/: main-window.xml
media/document/duskland/: index.xml
media/lang/: en_US.lang  zh_CN.lang
media/model/: model.mtl
media/scene/: main.xml
media/shader/: fragment.glsl  vertex.glsl
media/shader/2d/basic/: fragment.glsl  vertex.glsl
media/shader/2d/font/: fragment.glsl  vertex.glsl
media/shader/2d/gbuffer/: fragment.glsl  vertex.glsl
media/shader/2d/green/: fragment.glsl
media/shader/2d/particle/: fragment.glsl  vertex.glsl
media/shader/2d/red/: fragment.glsl  vertex.glsl
media/shader/basic/: basic.frag  basic.vert
media/shader/demo/basic/: vertex.glsl
media/shader/sprite_2d/: fragment.glsl  vertex.glsl
media/shader/standard/: fragment.glsl
media/shader/standard/composite_0/: fragment.glsl  vertex.glsl
media/shader/standard/deferred/: fragment.glsl  vertex.glsl
media/shader/standard/final/: fragment.glsl
media/shader/standard/gbuffer/: fragment.glsl  vertex.glsl
media/shader/standard/gbuffer_basic/: fragment.glsl  vertex.glsl
media/shader/standard/shadow_map/: vertex.glsl
media/table/: demo.field.xml  demo.table.xml  demo.xml
mods/base/: manifest.json
mods/base/script/@types/: index.d.ts
mods/base/src/: index.js
mods/demo/: manifest.json
mods/demo/lua/: init.lua
mods/demo/media/lang/: zh_CN.lang
mods/demo/script/: index.js
mods/demo/src/: index.js
mods/golem-core/: manifest.json
mods/golem-core/definition/: golem-core.lua
mods/golem-core/lua/: init.lua
projects/: CMakeLists.txt
projects/balance/: CMakeLists.txt
projects/balance/src/: main.cc
projects/duskland/: CMakeLists.txt
projects/duskland/include/: GameApplication.hpp
projects/duskland/src/: GameApplication.cc  main.cc
projects/neo/: CMakeLists.txt
projects/neo/src/: main.cc
projects/opengltest/: CMakeLists.txt
projects/opengltest/src/: main.cc
script/: index.js
shader/: fragment.glsl  vertex.glsl
tests/: CMakeLists.txt  entry.cc.in
tests/common/: Accessor.hpp  TestException.hpp  TestSuit.hpp  Testing.hpp
tests/core/: CMakeLists.txt  main.cc
tests/core/src/: Object.cc
tests/core/suits/: Object.hpp  Singleton.hpp  TestArray.hpp  TestJson.hpp  TestMap.hpp  TestObject.hpp  TestSingleton.hpp  TestValue.hpp
tests/neo/: CMakeLists.txt
tests/neo/src/: main.cc
tests/neo/src/suits/: TestParser.cc
tests/neo/src/suits/compiler/: parser.cc
tests/neo/src/suits/engine/: TestRuntime.cc  TestVariable.cc  context.cc  gc.cc  runtime.cc  variable.cc
tests/neo/src/suits/runtime/: TestFunction.cc  TestObject.cc  TestSymbol.cc
