cmake_minimum_required(VERSION 3.12)
project(firefly)
include_directories(./3rdparty/quickjs)
set(FF_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/packages/include)
set(FF_ROOT_PROJECT_NAME ${PROJECT_NAME})
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/Debug)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/Release)
set(DEBUG_ENABLE on)
set(CMAKE_CXX_FLAGS "-Wall -Werror -Wno-non-template-friend")

if(CMAKE_BUILD_TYPE MATCHES "Debug")
    set(DEBUG_ENABLE on)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG})
elseif(CMAKE_BUILD_TYPE MATCHES "Release")
    set(DEBUG_ENABLE off)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE})
elseif(CMAKE_BUILD_TYPE MATCHES "MinSizeRel")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE})
    set(DEBUG_ENABLE off)
elseif(CMAKE_BUILD_TYPE MATCHES "RelWithDebInfo")
    set(DEBUG_ENABLE on)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG})
endif()

file(REMOVE_RECURSE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/definition)
file(REMOVE_RECURSE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/lua)
file(REMOVE_RECURSE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/media)
file(REMOVE_RECURSE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/mods)
file(REMOVE_RECURSE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/config)

file(COPY ${PROJECT_SOURCE_DIR}/media DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY ${PROJECT_SOURCE_DIR}/mods DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY ${PROJECT_SOURCE_DIR}/config DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

find_package(fmt CONFIG REQUIRED)
find_package(SDL2 CONFIG REQUIRED)
find_package(SDL2_image CONFIG REQUIRED)
find_package(SDL2_mixer CONFIG REQUIRED)
find_package(glad CONFIG REQUIRED)
find_package(yaml-cpp CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)
find_package(LibXml2 REQUIRED)
find_package(cJSON CONFIG REQUIRED)
find_package(Lua REQUIRED)
find_package(imgui CONFIG REQUIRED)
find_package(Freetype REQUIRED)
include_directories(${LUA_INCLUDE_DIR})

if(DEBUG_ENABLE MATCHES "on")
    enable_testing()
    add_subdirectory(tests)
endif()

add_subdirectory(packages)
add_subdirectory(projects)
add_subdirectory(3rdparty/quickjs)