
set(FF_PACKAGES "")
file(GLOB PACKAGES ${PROJECT_SOURCE_DIR}/packages/include/*)
foreach(PACKAGE ${PACKAGES})
    if(IS_DIRECTORY ${PACKAGE})
        get_filename_component(PACKAGE ${PACKAGE} NAME)
        list(APPEND FF_PACKAGES ${FF_ROOT_PROJECT_NAME}.${PACKAGE})
    endif()
endforeach(PACKAGE ${PACKAGES})

file(GLOB PROJECTS ${PROJECT_SOURCE_DIR}/projects/*)
foreach(PROJECT ${PROJECTS})
    if(IS_DIRECTORY ${PROJECT})
        get_filename_component(PROJECT ${PROJECT} NAME)
        set(FF_PROJECT_NAME ${PROJECT})
        add_subdirectory(${PROJECT})
    endif()
endforeach(PROJECT ${PROJECTS})
