file(GLOB TESTS ${PROJECT_SOURCE_DIR}/tests/*)
find_package(unofficial-cunit CONFIG REQUIRED)
include_directories(${PROJECT_SOURCE_DIR}/tests/common)
foreach(TEST_MODULE ${TESTS})
    if(IS_DIRECTORY ${TEST_MODULE})
        if(${TEST_MODULE} MATCHES "common")
        else()
            set(FF_MODULE_NAME ${TEST_MODULE})
            get_filename_component(FF_MODULE_NAME ${FF_MODULE_NAME} NAME)
            add_subdirectory(${TEST_MODULE})
        endif()
    endif()
endforeach(TEST_MODULE ${TESTS})

