include_directories(${FF_INCLUDE_DIR})
add_executable(${FF_PROJECT_NAME} src/main.cc)
target_link_libraries(${FF_PROJECT_NAME} PRIVATE ${FF_PACKAGES})
target_link_libraries(${FF_PROJECT_NAME} PRIVATE glad::glad)
target_link_libraries(${FF_PROJECT_NAME} PRIVATE fmt::fmt)
target_link_libraries(${FF_PROJECT_NAME} PRIVATE SDL2::SDL2 SDL2::SDL2main)