include_directories(${FF_INCLUDE_DIR})
include_directories(./include)
file(GLOB SOURCES src/*.cc)
add_executable(${FF_PROJECT_NAME} ${SOURCES})
target_link_libraries(${FF_PROJECT_NAME} PRIVATE ${FF_PACKAGES})
target_link_libraries(${FF_PROJECT_NAME} PRIVATE glad::glad)
target_link_libraries(${FF_PROJECT_NAME} PRIVATE fmt::fmt)
target_link_libraries(${FF_PROJECT_NAME} PRIVATE SDL2::SDL2main SDL2::SDL2 )
target_link_libraries(${FF_PROJECT_NAME} PRIVATE glm::glm)