include_directories(${FF_INCLUDE_DIR})
include_directories(./include)
file(GLOB SOURCES src/*.cc)
add_executable(${FF_PROJECT_NAME} ${SOURCES})
target_link_libraries(${FF_PROJECT_NAME} PUBLIC firefly)
target_link_libraries(${FF_PROJECT_NAME} PUBLIC SDL2::SDL2main)
add_dependencies(${FF_PROJECT_NAME} copy)